--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
 asgiref==3.5.0
+backports.entry-points-selectable==1.1.1
+certifi==2021.10.8
+cryspy==0.5.9
+distlib==0.3.4
 dj-database-url==0.5.0
-Django==4.0.2
+django-crispy-forms==1.14.0
+django-extensions==3.1.5
 django-filter==21.1
 django-heroku==0.3.1
+django-on-heroku==1.1.2
+filelock==3.4.0
+gunicorn==20.1.0
+numpy==1.22.1
+Pillow==9.0.1
+pipenv==2021.11.23
+platformdirs==2.4.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
+pycifstar==0.2.8
+pydotplus==2.0.2
+pyparsing==3.0.7
+scipy==1.7.3
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
+virtualenv==20.10.0
+virtualenv-clone==0.5.7
 whitenoise==6.0.0
